--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,132 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Roboto, Helvetica, sans-serif;
+  background: linear-gradient(0.25turn, gray, white, gray);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+#main {
+  display: flex;
+  height: calc(100vh - 10vh);
+}
+
+#main > article {
+  flex: 1;
+  overflow-y: auto;
+}
+
+#main > nav,
+#main > aside {
+  flex: 0 0 10vw;
+  background: beige;
+}
+
+#main > nav {
+  order: -1;
+  position: sticky;
+}
+
+header, footer, article, nav, aside {
+  padding: 1em;
+}
+
+header, footer {
+  background: black;
+  height: 10vh;
+  position: sticky;
+}
+
+mat-icon {
+  color: black !important;
+}
+
+.icon-white {
+  color: white !important;
+}
+
+.menu-item-selected {
+  background-color: black;
+  color: white;
+}
+
+.menu-item-selected:hover {
+  background-color: black !important;
+  color: white !important;
+}
+
+.user-image {
+  border-radius: 100%;
+  max-width: 10vw;
+  margin: 10px;
+}
+
+.big-image {
+  max-width: 200px;
+  margin: 15px;
+}
+
+.medium-image {
+  max-width: 100px;
+  margin: 10px;
+}
+
+.small-image {
+  max-width: 50px;
+  margin: 5px;
+}
+
+.extra-small-image {
+  max-width: 25px;
+  margin: 1px;
+}
+
+.sidenav-button {
+  margin-bottom: 15px;
+}
+
+.mat-raised-button, .mat-stroked-button {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+
+.top-end-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.width-80 {
+  width: 80%;
+}
+
+mat-card {
+  max-width: 80vw;
+  margin: 20px;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.75);
+}
+
+.game-image {
+  border-radius: 15px;
+  max-width: 200px;
+  object-fit: cover;
+  margin: 10px;
+  margin-right: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+}
