--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,12 @@
 <div style="margin-top: 15vh;">
-  <img [routerLink]="['ps4']" class="game-platform-card" src="https://gmedia.playstation.com/is/image/SIEPDC/ps-default-listing-thumb-05oct20">
-  <img [routerLink]="['xbox']" class="game-platform-card" src="https://www.arkade.com.br/wp-content/uploads/2020/10/Xbox-Logo.jpg">
+  <img [routerLink]="['PS4']" class="game-platform-card" src="https://gmedia.playstation.com/is/image/SIEPDC/ps-default-listing-thumb-05oct20">
+  <img [routerLink]="['Xbox']" class="game-platform-card" src="https://www.arkade.com.br/wp-content/uploads/2020/10/Xbox-Logo.jpg">
   <br>
-  <img [routerLink]="['switch']" class="game-platform-card" src="https://i.pinimg.com/736x/d8/23/d5/d823d50eb202c01e48ae123bdbbe6eb1.jpg">
-  <img [routerLink]="['pc']" class="game-platform-card" src="https://www.creativefabrica.com/wp-content/uploads/2019/03/Monogram-PC-Logo-Design-by-Greenlines-Studios.jpg">
+  <img [routerLink]="['Switch']" class="game-platform-card" src="https://i.pinimg.com/736x/d8/23/d5/d823d50eb202c01e48ae123bdbbe6eb1.jpg">
+  <img [routerLink]="['PC']" class="game-platform-card" src="https://www.creativefabrica.com/wp-content/uploads/2019/03/Monogram-PC-Logo-Design-by-Greenlines-Studios.jpg">
+</div>
+<div>
+  <button mat-raised-button class="add-game-button" [routerLink]="['/add-game']">
+    <mat-icon style="color: white !important;">add</mat-icon> Adicionar Jogo
+  </button>
 </div>
