--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,20 +1,23 @@
 <mat-card class="box box" *ngFor="let jogo of jogos">
   <mat-card-header>
-    <mat-card-title style="cursor: pointer;" [routerLink]="['0']"> {{jogo.nome}} </mat-card-title>
+    <mat-card-title style="cursor: pointer;" [routerLink]="jogo.id"> {{jogo.nome}} </mat-card-title>
   </mat-card-header>
   <mat-card-content class="d-flex align-items-center">
     <div>
-      <img class="game-image" [src]="jogo.imagem" [routerLink]="['0']">
+      <img class="game-image" [src]="jogo.imagem" [routerLink]="jogo.id">
     </div>
     <hr>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-2">
+        <h5><strong>Nota</strong></h5><p>{{jogo.nota}}/10</p>
+      </div>
+      <div class="col-md-3">
         <h5><strong>Título</strong></h5><p>{{jogo.nome}}</p>
       </div>
       <div class="col-md-4">
         <h5><strong>Desenvolvedor</strong></h5><p>{{jogo.desenvolvedor}}</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <h5><strong>Gênero</strong></h5><p>{{jogo.genero}}</p>
       </div>
       <div class="col-md-12">
