--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,3 +11,13 @@
 .game-platform-card:hover {
   filter: brightness(80%);
 }
+
+.add-game-button {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  color: white;
+  background-color: rgb(0, 0, 122);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.75);
+  height: 60px;
+}
