--- a/src/app/add-game/add-game.component.css
+++ b/src/app/add-game/add-game.component.css
@@ -6,7 +6,7 @@
 }
 
 .create-game-button {
-  color: white;
-  background-color: rgb(0, 0, 122);
+  color: white !important;
+  background-color: rgb(0, 0, 122) !important;
   height: 50px;
 }
