--- a/src/app/add-game/add-game.component.html
+++ b/src/app/add-game/add-game.component.html
@@ -74,7 +74,7 @@
     </div>
   </mat-card-content>
   <mat-card-actions class="d-flex justify-content-center">
-    <button [ngClass]="create.disabled ? '' : 'create-game-button'" #create mat-raised-button (click)="createGame()" [disabled]="disableSave()">
+    <button [ngClass]="disableSave() ? '' : 'create-game-button'" #create mat-raised-button (click)="createGame()" [disabled]="disableSave()">
       <mat-icon style="color: white !important;">save</mat-icon> Salvar Jogo
     </button>
   </mat-card-actions>
