--- a/src/app/games/games.component.css
+++ b/src/app/games/games.component.css
@@ -5,3 +5,12 @@
 mat-card-title:hover {
   text-decoration: underline;
 }
+
+.search-game-button {
+  color: white !important;
+  background-color: rgb(0, 0, 122) !important;
+}
+
+.height-50 {
+  height: 50px;
+}
