--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,8 +16,8 @@
   position: absolute;
   bottom: 30px;
   right: 30px;
-  color: white;
-  background-color: rgb(0, 0, 122);
+  color: white !important;
+  background-color: rgb(0, 0, 122) !important;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.75);
   height: 60px;
 }
