--- a/src/app/reviews/reviews.component.css
+++ b/src/app/reviews/reviews.component.css
@@ -3,6 +3,6 @@
 }
 
 .create-review-button {
-  color: white;
-  background-color: rgb(0, 0, 122);
+  color: white !important;
+  background-color: rgb(0, 0, 122) !important;
 }
