--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -6,13 +6,12 @@
   <mat-card-content class="text-center">
     <img class="game-image" [src]="jogo.imagem">
     <div class="d-flex align-items-center">
-      <div class="card" *ngFor="let review of reviews" style="margin-top: 15px;">
-        <div class="card-body">
-          <div class="col-md-4">
+      <div class="card full-width" *ngFor="let review of reviews" style="margin-top: 15px;">
+        <div class="card-body" style="margin: 10px;">
             <h5>{{review.autor}}</h5><h6><strong>Nota: {{review.nota}} / 10</strong></h6>
-          </div>
-          <div class="col-md-12"><p>{{review.review}}</p></div>
+            <p>{{review.review}}</p>
         </div>
+        <br>
       </div>
     </div>
   </mat-card-content>
